--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Predict the bears</title>
+  <title>Predict the h555a</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -19,7 +19,7 @@ form{ color:white;}
 </style>
 <body style="background-image: url('https://images.unsplash.com/photo-1543493311-14cc44c3ced4?ixlib=rb-1.2.1&auto=format&fit=crop&w=2378&q=80'); background-size: cover; margin-left: 5%;">
  <div class="login">
-  <h1>Predict the bear</h1>
+  <h1>Predict the h555a</h1>
 
     <div class="Variables">
     <form action="{{ url_for('predict')}}"method="post" enctype=multipart/form-data>
