--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Predict the h555a</title>
+  <title>CRS Machine Learning Model</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -17,30 +17,12 @@ body,h1 {font-family: "Raleway", sans-serif; color:white; font-weight: bold; }
 body, html {height: 100% }
 form{ color:white;}
 </style>
-<body style="background-image: url('https://images.unsplash.com/photo-1543493311-14cc44c3ced4?ixlib=rb-1.2.1&auto=format&fit=crop&w=2378&q=80'); background-size: cover; margin-left: 5%;">
+<body style="background-image: url('https://thedatacompany.com/wp-content/uploads/2020/06/June-Blog-1500x960.jpg'); background-size: cover; margin-left: 5%;">
  <div class="login">
-  <h1>Predict the h555a</h1>
-
-    <div class="Variables">
-    <form action="{{ url_for('predict')}}"method="post" enctype=multipart/form-data>
-
-    <label>Pick image</label>
-    <input type=file name=file>
- 
-    </div>
-    <br>
-   <br>
-    <div>
-    <button type="submit" class="btn btn-primary btn-block btn-large">Predict The Bear</button>
-    </div>
-
-    </form>
-
-   <br>
-   <br>
-   {{ prediction_text }}
-   {{ prediction }}
-
+   <br/>
+  <h1>CRS Machine Learning Model</h1>
+  <h2>Predict labels given text</h2>
+  <h2>You can access it by post method with body 'text' to current url/predict</h2>
  </div>
 
 
