--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@ form{ color:white;}
    <br/>
   <h1>CRS Machine Learning Model</h1>
   <h2>Predict labels given text</h2>
+  <h2>Optional Params: threshold (default: 0), precision(default: 3)</h2>
   <h2>You can access it by post method with body 'text' to current url/predict</h2>
  </div>
 
